<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:layout_constraintBottom_toTopOf="@+id/btnCsv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <Button
        android:id="@+id/btnRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etSubject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/jm_no_p_edm_tu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etLecturer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/vyu_uj_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSubject" />

    <EditText
        android:id="@+id/etRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/k_d_u_ebny"
        app:layout_constraintStart_toEndOf="@+id/etCode"
        app:layout_constraintTop_toBottomOf="@+id/etLecturer" />

    <EditText
        android:id="@+id/etCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/k_d_p_edm_tu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLecturer" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlWeekday" />

    <Button
        android:id="@+id/btnCsv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_from_csv_file"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/ettStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/start_time"
        app:layout_constraintEnd_toStartOf="@+id/ettEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCode" />

    <EditText
        android:id="@+id/ettEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/end_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCode" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sLection"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/p_edn_ka"
        app:layout_constraintBottom_toTopOf="@+id/ettEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLecturer" />

    <Spinner
        android:id="@+id/tlWeekday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/array_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ettEnd" />


</androidx.constraintlayout.widget.ConstraintLayout>