<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:clipToPadding="false">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/buttons_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_app_name"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shuffle_btn"
            android:layout_margin="10dp"
            android:backgroundTint="@color/design_default_color_primary"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_btn"
            android:layout_margin="10dp"
            android:backgroundTint="@color/design_default_color_secondary"
            />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="15:00"
        android:textSize="40sp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@id/buttons_panel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_schedule"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_time"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" />


    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btn_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>