<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingEnd="16dp"
            android:paddingStart="6dp"
            app:titleTextColor="@color/white"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_baseline_close_24_white"
            app:subtitleTextColor="@color/white"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_add_new_player_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_player_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp"
            android:textSize="20dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_new_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/name"
            app:layout_constraintTop_toBottomOf="@id/txt_add_new_player_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_txt_new_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_new_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/surname"
            app:layout_constraintTop_toBottomOf="@id/txt_new_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_txt_new_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm_add_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add"
            app:layout_constraintTop_toBottomOf="@id/txt_new_surname"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>