<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="5dp"
    tools:context=".settings.SettingsFragment">

    <GridLayout
        android:id="@+id/buttons_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:alignmentMode="alignBounds"

        >
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_group_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_size"
            android:labelFor="@id/num_group_size"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            />
        <NumberPicker
            android:id="@+id/num_group_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_group_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="8dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="center"

            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_time_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_interval"
            android:labelFor="@id/num_time_interval"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:layout_gravity="center"

            />
        <NumberPicker
            android:id="@+id/num_time_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="8dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="center"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_names"
            android:labelFor="@id/num_group_size"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_margin="5dp"
            android:layout_gravity="center"

            />
        <NumberPicker
            android:id="@+id/num_group_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="8dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_gravity="center"
            />
    </GridLayout>



    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        android:layout_margin="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons_panel"
        app:layout_constraintBottom_toTopOf="@id/btn_add_player"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_all_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>